Only set the format to 1.0 if it was not changed due to OpenGL

Since the userRequestedApi variable can be set when a second
Qt3DWindow is created (since the environment variable is set after
the first time). Then we should be sure to only set the format
version to 1.0 if it was not already set due to OpenGL being
used.

Fixes: QTBUG-86436
Change-Id: Ib68f5f1f7f8651c1f20b66060fead7f3dcfb97e0
Reviewed-by: Mike Krus <mike.krus@kdab.com>
(cherry picked from commit 5a4a8e4f6644bc1d1cbfb1b0c96b096d6d4a9a5a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>